syntax = "proto3";

package go.micro.srv.login;

service Login {
    rpc Auth(AuthReq) returns (AuthResp) {}
    rpc LoginByJaccount(LJReq) returns (TokenResp) {}
    rpc LoginByUP(UPReq) returns (TokenResp) {}
    rpc GetAccessToken(CodeReq) returns (AccessResp) {}
}

message AccessResp {
    string access_token = 11;
}

message CodeReq {
    string redirect_uri = 9;
    string code = 10;
}


message AuthReq {
    string jwt = 1;
}

message AuthResp {
    int32 status = 1; // success = 0, expired = -1, error = -2
    int32 user_id = 2;
    string username = 6;
    bool admin = 3;
}

message LJReq {
    string access_token = 2;
}

message TokenResp {
    int32 status = 4;
    string jwt_token = 5;
}

message UPReq {
    string username = 3;
    string password = 4;
}